add a list to push code

--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my first ever github repo</title>
+    <title>my first ever github repo</title> 
+    <link rel="stylesheet" href="style/blog.css">
 </head>
-<body>
-    
+<body> 
+    <div>
+    <h3>my frist website</h3> 
+    <P>Lorem ipsum dolor sit
+         amet consectetur, adipisicing elit.
+         Explicabo dolorum
+          sunt quae maxime
+           in consectetur quasi quos dolore,
+        animi similique, libero
+         omnis ad autem at illo fugit vitae, voluptas doloribus!</P> 
+    </div>
 </body>
 </html>
